// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavListItem/> renders matching snapshot when active 1`] = `
<DocumentFragment>
  .c0 {
  list-style-type: none;
  margin-bottom: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: rgb(255,235,59);
  border-radius: 4px;
  width: 227px;
  margin-right: 4px;
  font-weight: 700;
}

.c1:hover {
  background-color: rgb(216,221,224);
}

.c1:hover + div {
  border-radius: 4px;
  background-color: rgb(216,221,224);
}

.c1:hover + div button {
  opacity: 1;
  color: rgb(255,255,255);
}

.c1 a {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c1 a:focus {
  box-shadow: none;
}

.c1 img {
  padding-top: 2px;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  width: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 div {
  padding-left: 4px;
  padding-right: 4px;
  color: rgb(33,43,50);
}

<li
    class="c0"
  >
    <div
      class="c1"
    >
      <a
        href="/test-link"
      >
        <img
          src="test-svg"
        />
        <div>
          folder title
        </div>
      </a>
    </div>
  </li>
</DocumentFragment>
`;

exports[`<NavListItem/> renders matching snapshot when not active 1`] = `
<DocumentFragment>
  .c0 {
  list-style-type: none;
  margin-bottom: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: inherit;
  border-radius: 4px;
  width: 227px;
  margin-right: 4px;
  font-weight: inherit;
}

.c1:hover {
  background-color: rgb(216,221,224);
}

.c1:hover + div {
  border-radius: 4px;
  background-color: rgb(216,221,224);
}

.c1:hover + div button {
  opacity: 1;
  color: rgb(255,255,255);
}

.c1 a {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c1 a:focus {
  box-shadow: none;
}

.c1 img {
  padding-top: 2px;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  width: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 div {
  padding-left: 4px;
  padding-right: 4px;
  color: rgb(33,43,50);
}

<li
    class="c0"
  >
    <div
      class="c1"
    >
      <a
        href="/test-link"
      >
        <img
          src="test-svg"
        />
        <div>
          folder title
        </div>
      </a>
    </div>
  </li>
</DocumentFragment>
`;
